{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 24,
  "lineage": "7ff6ed3b-a998-08d9-1eba-635c122ef1e6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:413816840702:vpc/vpc-0bd672d5ce12e0a5b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-00d391b0a4d4f4d9f",
            "default_route_table_id": "rtb-059a0eca9b7e4a9f1",
            "default_security_group_id": "sg-00adf99e9b78e859e",
            "dhcp_options_id": "dopt-01ac92d44777f8da1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0bd672d5ce12e0a5b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-059a0eca9b7e4a9f1",
            "owner_id": "413816840702",
            "region": "ap-south-1",
            "tags": {
              "Name": "Default VPC"
            },
            "tags_all": {
              "Name": "Default VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "413816840702",
            "id": "vpc-0bd672d5ce12e0a5b",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01a00762f46d584a1",
            "arn": "arn:aws:ec2:ap-south-1:413816840702:instance/i-0f1cb6cf7619fdef8",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f1cb6cf7619fdef8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-key-from-ubuntu-mypc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0cbf730b3b3648ad8"
              }
            ],
            "primary_network_interface_id": "eni-0cbf730b3b3648ad8",
            "private_dns": "ip-172-31-12-118.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.12.118",
            "public_dns": "ec2-3-109-59-147.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.59.147",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02d2548859664e6f7",
                "volume_size": 15,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "automate-tf-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d4dc6ace56358b3e",
            "tags": {
              "Name": "first-ec2-instance-default"
            },
            "tags_all": {
              "Name": "first-ec2-instance-default"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09b34f9598950a5d1"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "413816840702",
            "id": "i-0f1cb6cf7619fdef8",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_key_pair.my_key",
            "aws_security_group.my_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:413816840702:security-group/sg-09b34f9598950a5d1",
            "description": "This will add a tf generated sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-09b34f9598950a5d1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "automate-tf-sg",
            "name_prefix": "",
            "owner_id": "413816840702",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-sg-default"
            },
            "tags_all": {
              "Name": "tf-sg-default"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd672d5ce12e0a5b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "413816840702",
            "id": "sg-09b34f9598950a5d1",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_my_sg_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:413816840702:security-group-rule/sgr-05cafe279afc618a6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-05cafe279afc618a6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-09b34f9598950a5d1",
            "security_group_rule_id": "sgr-05cafe279afc618a6",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "413816840702",
            "id": "sgr-05cafe279afc618a6",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.my_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_my_sg_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:413816840702:security-group-rule/sgr-0ca97e67dfe981b63",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0ca97e67dfe981b63",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-09b34f9598950a5d1",
            "security_group_rule_id": "sgr-0ca97e67dfe981b63",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "413816840702",
            "id": "sgr-0ca97e67dfe981b63",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.my_sg"
          ]
        }
      ]
    }
  ]
}